--- a/hugo.yaml
+++ b/hugo.yaml
@@ -275,7 +275,7 @@ params:
       #    url: "https://example.com"
       - title: "High School"
         school:
-          name: "Baitush Sharaf Ideal Kamil Madrasah"
+          name: "Tumchar Islamia Kamil Madrasah"
           url: "https://example.org"
         GPA: "5.0 out of 5.0"
         featuredLink:
