some more tweaks

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -35,11 +35,11 @@ Menus:
       title: Blog posts
       url: /blogs
       weight: 1
-    - identifier: projects 
-      name: Projects
-      title: Projects
-      url: /projects
-      weight: 2
+    #- identifier: projects 
+    #  name: Projects
+    #  title: Projects
+    #  url: /projects
+    #  weight: 2
     #Dropdown menu
     # - identifier: dropdown
     #   title: Example dropdown menu
@@ -121,13 +121,13 @@ params:
     stickyNavBar:
       enable : true
       showOnScrollUp : true
-    enableSeparator: false
+    enableSeparator: true 
     menus:
       disableAbout: false
-      disableExperience: false
-      disableEducation: false
+      disableExperience: true
       disableProjects: false
-      disableAchievements: false
+      disableAchievements: true 
+      disableEducation: true 
       disableContact: false
 
   # Hero
@@ -163,7 +163,7 @@ params:
   about:
     enable: true
     title: "About Me"
-    image: "images/me.jpg"
+    image: images/me.jpg
     content: |-
       I am a Unix Enthusiast with a fascination for DevOps, Cloud & Securing.
 
@@ -243,7 +243,7 @@ params:
 
   # Education
   education:
-    enable: true
+    enable: false 
     # title: "Custom Name"
     index: false
     items:
