--- a/hugo.yaml
+++ b/hugo.yaml
@@ -361,7 +361,7 @@ params:
 
   # List pages like blogs and posts
   listPages:
-    disableFeaturedImage: true 
+    disableFeaturedImage: false 
 
   # Single pages like blog and post
   singlePages:
